--- a/Flask/Static/idex.css
+++ b/Flask/Static/idex.css
@@ -5,6 +5,11 @@ body {
     height: 100%;
 }
 
+.task-container{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 #main-container {
     display: flex;
     justify-content: space-between;
@@ -13,7 +18,6 @@ body {
 }
 
 #calendar_sec {
-    width: 45%;
     margin-right: 20px;
 }
 
@@ -146,19 +150,19 @@ body {
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
 }
 
-#project-button {
+/* #project-button {
     margin-bottom: 20px;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #5100ff;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
 
-#project-button:hover {
-    background-color: #0056b3;
-}
+/* #project-button:hover {
+    background-color: #3f00b3;
+} */
 
 #project-modal {
     display: none;
@@ -178,22 +182,29 @@ body {
     text-align: center;
 }
 
-#project-modal ul {
+.project-section ul {
     list-style-type: none;
     padding: 0;
-    margin: 0;
 }
 
-#project-modal ul li {
+.project-section ul li {
     background-color: #f9f9f9;
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
 }
 
-#project-modal ul li:hover {
+.project-section ul li:hover {
     background-color: #f0f0f0;
+}
+
+.project-section label {
+    flex-grow: 1;
+    margin-left: 10px;
 }
 
 /* #project-modal button {
